tests/invalid/integral_constant_no_suffix.err_exp
integral_constant_no_suffix.m:016: In clause for predicate `main'/2:
integral_constant_no_suffix.m:016:   in argument 1 of call to predicate
integral_constant_no_suffix.m:016:   `integral_constant_no_suffix.life_universe_everything'/1:
integral_constant_no_suffix.m:016:   type error: [38;5;87mvariable `N'[39;49m has type
integral_constant_no_suffix.m:016:     [38;5;203mint;[39;49m
integral_constant_no_suffix.m:016:   expected type was
integral_constant_no_suffix.m:016:     [38;5;40muint8.[39;49m
integral_constant_no_suffix.m:016:   [38;5;226mA integer constant that consists only of[39;49m
integral_constant_no_suffix.m:016:   [38;5;226mdigits is always of type `int'. Unsigned[39;49m
integral_constant_no_suffix.m:016:   [38;5;226minteger constants of the default size[39;49m
integral_constant_no_suffix.m:016:   [38;5;226mshould have the suffix `u'; constants of[39;49m
integral_constant_no_suffix.m:016:   [38;5;226msized integer types should have an `i8',[39;49m
integral_constant_no_suffix.m:016:   [38;5;226m`i16', `i32' or `i64' suffix if they are[39;49m
integral_constant_no_suffix.m:016:   [38;5;226msigned, and an `u8', `u16', `u32' or `u64'[39;49m
integral_constant_no_suffix.m:016:   [38;5;226msuffix if they are unsigned.[39;49m
integral_constant_no_suffix.m:024: In clause for predicate
integral_constant_no_suffix.m:024:   `life_universe_everything'/1:
integral_constant_no_suffix.m:024:   in argument 1 of clause head:
integral_constant_no_suffix.m:024:   type error in unification of variable
integral_constant_no_suffix.m:024:   `HeadVar__1'
integral_constant_no_suffix.m:024:   and constant `42'.
integral_constant_no_suffix.m:024:   [38;5;87mvariable `HeadVar__1'[39;49m has type
integral_constant_no_suffix.m:024:     [38;5;203muint8,[39;49m
integral_constant_no_suffix.m:024:   [38;5;87mconstant `42'[39;49m has type
integral_constant_no_suffix.m:024:     [38;5;40mint.[39;49m
integral_constant_no_suffix.m:024:   [38;5;226mA integer constant that consists only of[39;49m
integral_constant_no_suffix.m:024:   [38;5;226mdigits is always of type `int'. Unsigned[39;49m
integral_constant_no_suffix.m:024:   [38;5;226minteger constants of the default size[39;49m
integral_constant_no_suffix.m:024:   [38;5;226mshould have the suffix `u'; constants of[39;49m
integral_constant_no_suffix.m:024:   [38;5;226msized integer types should have an `i8',[39;49m
integral_constant_no_suffix.m:024:   [38;5;226m`i16', `i32' or `i64' suffix if they are[39;49m
integral_constant_no_suffix.m:024:   [38;5;226msigned, and an `u8', `u16', `u32' or `u64'[39;49m
integral_constant_no_suffix.m:024:   [38;5;226msuffix if they are unsigned.[39;49m
For more information, recompile with `-E'.
